tests/errors/test_14.x
// Break must be in a loop construction

fn main() -> void {

    break;

    if true {
        break;
    }
}